- added the possibility of storing the unlimited results on tachyon. In the config file there are two new configurations: 	# the ip of the destination namenode - it is used when querying with unlimited number of results. 	rdd.destination.ip="devbox.local" 	# where to store the results in the case of an unlimited query. Possible results : hdfs/tachyon. Default hdfs 	rdd.destination.location="hdfs"
- changed the dal to store complete information about where the results are stored: cassandra, hdfs or tackyon
- added the core-site xml to resources. It is needed when writing to tachyon.