@@ -9,5 +9,8 @@ echo $TACHYON_MASTER
 echo $MESOS_NATIVE_LIBRARY
 echo $JAVA_OPTS
 
+JAVA_OPTS +=" -XX:PermSize=512m -XX:MaxPermSize=512m"
+export JAVA_OPTS
+
 echo "Deploying jaws..."
 $dir/main-jaws.sh
